--- a/code/openalexsearch.ipynb
+++ b/code/openalexsearch.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "id": "4f2e39af-7b89-4ce2-974d-96686cb392bc",
    "metadata": {},
    "outputs": [],
@@ -13,17 +13,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "id": "ce91e05e-951d-4f21-9105-104b822deb90",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "245003317"
+       "245314678"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -66,124 +66,124 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "A global perspective on environmental flow assessment: emerging trends in the development and application of environmental flow methodologies for rivers\n",
-      "Rebecca E. Tharme\n",
-      "https://doi.org/10.1002/rra.736\n",
-      "2555.643\n",
+      "Extracting and composing robust features with denoising autoencoders\n",
+      "Pascal Vincent\n",
+      "https://doi.org/10.1145/1390156.1390294\n",
+      "5947.6367\n",
       "\n",
       "\n",
-      "Ecological responses to altered flow regimes: a literature review to inform the science and management of environmental flows\n",
-      "N. LeRoy Poff\n",
-      "https://doi.org/10.1111/j.1365-2427.2009.02272.x\n",
-      "2175.0125\n",
+      "Stacked Denoising Autoencoders: Learning Useful Representations in a Deep Network with a Local Denoising Criterion\n",
+      "Pascal Vincent\n",
+      "None\n",
+      "3256.4844\n",
       "\n",
       "\n",
-      "THE CHALLENGE OF PROVIDING ENVIRONMENTAL FLOW RULES TO SUSTAIN RIVER ECOSYSTEMS\n",
-      "Angela Arthington\n",
-      "https://doi.org/10.1890/1051-0761(2006)016[1311:tcopef]2.0.co;2\n",
-      "2065.2644\n",
+      "Reducing the Dimensionality of Data with Neural Networks\n",
+      "Geoffrey E. Hinton\n",
+      "https://doi.org/10.1126/science.1127647\n",
+      "2322.658\n",
       "\n",
       "\n",
-      "The ecological limits of hydrologic alteration (ELOHA): a new framework for developing regional environmental flow standards\n",
-      "N. LeRoy Poff\n",
-      "https://doi.org/10.1111/j.1365-2427.2009.02204.x\n",
-      "2035.7144\n",
+      "Semi-Supervised Recursive Autoencoders for Predicting Sentiment Distributions\n",
+      "Richard Socher\n",
+      "None\n",
+      "1972.7487\n",
       "\n",
       "\n",
-      "Incorporating thermal regimes into environmental flows assessments: modifying dam operations to restore freshwater ecosystem integrity\n",
-      "Julian D. Olden\n",
-      "https://doi.org/10.1111/j.1365-2427.2009.02179.x\n",
-      "1430.4535\n",
+      "Dynamic Pooling and Unfolding Recursive Autoencoders for Paraphrase Detection\n",
+      "Richard Socher\n",
+      "None\n",
+      "1799.0897\n",
       "\n",
       "\n",
-      "Restoring Environmental Flows by Modifying Dam Operations\n",
-      "Brian Richter\n",
-      "https://doi.org/10.5751/es-02014-120112\n",
-      "1392.6423\n",
+      "Anomaly Detection with Robust Deep Autoencoders\n",
+      "Chong Zhou\n",
+      "https://doi.org/10.1145/3097983.3098052\n",
+      "1710.8915\n",
       "\n",
       "\n",
-      "Classification of natural flow regimes in Australia to support environmental flow management\n",
-      "Mark J. Kennard\n",
-      "https://doi.org/10.1111/j.1365-2427.2009.02307.x\n",
-      "1334.545\n",
+      "Anomaly Detection Using Autoencoders with Nonlinear Dimensionality Reduction\n",
+      "Mayu Sakurada\n",
+      "https://doi.org/10.1145/2689746.2689747\n",
+      "1700.7102\n",
       "\n",
       "\n",
-      "A collaborative and adaptive process for developing environmental flow recommendations\n",
-      "Brian Richter\n",
-      "https://doi.org/10.1002/rra.892\n",
-      "1279.5597\n",
+      "Importance Weighted Autoencoders\n",
+      "Yuri Burda\n",
+      "None\n",
+      "1691.5955\n",
       "\n",
       "\n",
-      "A PRESUMPTIVE STANDARD FOR ENVIRONMENTAL FLOW PROTECTION\n",
-      "Brian Richter\n",
-      "https://doi.org/10.1002/rra.1511\n",
-      "1198.0043\n",
+      "Autoencoders, Minimum Description Length and Helmholtz Free Energy\n",
+      "Geoffrey E. Hinton\n",
+      "None\n",
+      "1597.5643\n",
       "\n",
       "\n",
-      "Environmental Flows\n",
-      "Angela H. Arthington\n",
-      "https://doi.org/10.1525/california/9780520273696.001.0001\n",
-      "1110.6161\n",
+      "A Connection Between Score Matching and Denoising Autoencoders\n",
+      "Pascal Vincent\n",
+      "https://doi.org/10.1162/neco_a_00142\n",
+      "1582.278\n",
       "\n",
       "\n",
-      "Application of the Indicators of Hydrologic Alteration Software in Environmental Flow Setting1\n",
-      "Ruth Mathews\n",
-      "https://doi.org/10.1111/j.1752-1688.2007.00099.x\n",
-      "1109.4333\n",
+      "Cross-modal Retrieval with Correspondence Autoencoder\n",
+      "Fangxiang Feng\n",
+      "https://doi.org/10.1145/2647868.2654902\n",
+      "1578.9047\n",
       "\n",
       "\n",
-      "Environmental flows and the European Water Framework Directive\n",
-      "M. C. Acreman\n",
-      "https://doi.org/10.1111/j.1365-2427.2009.02181.x\n",
-      "1084.9215\n",
+      "Speech enhancement based on deep denoising autoencoder\n",
+      "Xugang Lu\n",
+      "https://doi.org/10.21437/interspeech.2013-130\n",
+      "1530.6918\n",
       "\n",
       "\n",
-      "Accounting for environmental flow requirements in global water assessments\n",
-      "Amandine Pastor\n",
-      "https://doi.org/10.5194/hess-18-5041-2014\n",
-      "1044.9194\n",
+      "Tutorial on Variational Autoencoders\n",
+      "Carl Doersch\n",
+      "None\n",
+      "1485.6052\n",
       "\n",
       "\n",
-      "A scenario-based holistic approach to environmental flow assessments for rivers\n",
-      "Jackie King\n",
-      "https://doi.org/10.1002/rra.709\n",
-      "1028.216\n",
+      "Autoencoders, Unsupervised Learning, and Deep Architectures\n",
+      "Pierre Baldi\n",
+      "None\n",
+      "1463.5833\n",
       "\n",
       "\n",
-      "Urban Stormwater Runoff: A New Class of Environmental Flow Problem\n",
-      "Christopher J. Walsh\n",
-      "https://doi.org/10.1371/journal.pone.0045814\n",
-      "1021.89435\n",
+      "Domain Generalization for Object Recognition with Multi-task Autoencoders\n",
+      "Muhammad Ghifary\n",
+      "https://doi.org/10.1109/iccv.2015.293\n",
+      "1408.5348\n",
       "\n",
       "\n",
-      "Flow : the essentials of environmental flows\n",
-      "Ger Bergkamp\n",
-      "https://doi.org/10.2305/iucn.ch.2003.wani.2.en\n",
-      "1014.69836\n",
+      "Semantic Autoencoder for Zero-Shot Learning\n",
+      "Elyor Kodirov\n",
+      "https://doi.org/10.1109/cvpr.2017.473\n",
+      "1378.6643\n",
       "\n",
       "\n",
-      "Environmental flows for natural, hybrid, and novel riverine ecosystems in a changing world\n",
-      "Mike Acreman\n",
-      "https://doi.org/10.1890/130134\n",
-      "983.4761\n",
+      "LLNet: A deep autoencoder approach to natural low-light image enhancement\n",
+      "Kin Gwn Lore\n",
+      "https://doi.org/10.1016/j.patcog.2016.06.008\n",
+      "1360.9978\n",
       "\n",
       "\n",
-      "Effects of Environmental Flow upon Tropical Cyclone Structure\n",
-      "William M. Frank\n",
-      "https://doi.org/10.1175/1520-0493(1999)127<2044:eoefut>2.0.co;2\n",
-      "944.1533\n",
+      "Variational Autoencoders for Collaborative Filtering\n",
+      "Dawen Liang\n",
+      "https://doi.org/10.1145/3178876.3186150\n",
+      "1328.6895\n",
       "\n",
       "\n",
-      "Theory, methods and tools for determining environmental flows for riparian vegetation: riparian vegetation-flow response guilds\n",
-      "David M. Merritt\n",
-      "https://doi.org/10.1111/j.1365-2427.2009.02206.x\n",
-      "890.76776\n",
+      "Age Progression/Regression by Conditional Adversarial Autoencoder\n",
+      "Zhifei Zhang\n",
+      "https://doi.org/10.1109/cvpr.2017.463\n",
+      "1326.3684\n",
       "\n",
       "\n",
-      "Environmental flow limits to global groundwater pumping\n",
-      "Inge E. M. de Graaf\n",
-      "https://doi.org/10.1038/s41586-019-1594-4\n",
-      "871.0667\n",
+      "Stacked Sparse Autoencoder (SSAE) for Nuclei Detection on Breast Cancer Histopathology Images\n",
+      "Jun Xu\n",
+      "https://doi.org/10.1109/tmi.2015.2458702\n",
+      "1304.4412\n",
       "\n",
       "\n"
      ]
@@ -191,7 +191,7 @@
     {
      "data": {
       "text/plain": [
-       "''"
+       "245314678"
       ]
      },
      "execution_count": 4,
@@ -230,7 +230,7 @@
     "\n",
     "    return _\n",
     "\n",
-    "searching('environmental%20flows',broad='yes')"
+    "searching('autoencoder',broad='yes')"
    ]
   },
   {
@@ -240,7 +240,7 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdin",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
       "what're you lookin' for today? \t environmental flow\n"
@@ -314,9 +314,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python (.conda-f2f_2)",
+   "display_name": "Python 3.9.6 64-bit",
    "language": "python",
-   "name": "conda-env-.conda-f2f_2-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -328,7 +328,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.9.6"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
+   }
   }
  },
  "nbformat": 4,
