--- a/scholarly.ipynb
+++ b/scholarly.ipynb
@@ -95,9 +95,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "litrev",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "litrev"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -109,10 +109,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
-  },
-  "orig_nbformat": 4
+   "version": "3.10.8"
+  }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
