--- a/12-29-22.ipynb
+++ b/12-29-22.ipynb
@@ -2,30 +2,33 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 307,
+   "execution_count": 335,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "A global perspective on environmental flow assessment: emerging trends in the development and application of environmental flow methodologies for rivers\n",
-      "Rebecca E. Tharme\n",
-      "https://doi.org/10.1002/rra.736\n",
-      "2520.7532\n",
-      "https://api.openalex.org/works/W1996950224/ngrams \n",
+      "Four billion people facing severe water scarcity\n",
+      "Mesfin Mekonnen\n",
+      "https://doi.org/10.1126/sciadv.1500323\n",
+      "1654.4683\n",
+      "2016-02-01\n",
+      "https://api.openalex.org/works/W2260274902/ngrams \n",
       "\n",
-      "Ecological responses to altered flow regimes: a literature review to inform the science and management of environmental flows\n",
+      "The ecological limits of hydrologic alteration (ELOHA): a new framework for developing regional environmental flow standards\n",
       "N. LeRoy Poff\n",
-      "https://doi.org/10.1111/j.1365-2427.2009.02272.x\n",
-      "2138.908\n",
-      "https://api.openalex.org/works/W2120716973/ngrams \n",
+      "https://doi.org/10.1111/j.1365-2427.2009.02204.x\n",
+      "1344.5311\n",
+      "2010-01-01\n",
+      "https://api.openalex.org/works/W2156353061/ngrams \n",
       "\n",
-      "THE CHALLENGE OF PROVIDING ENVIRONMENTAL FLOW RULES TO SUSTAIN RIVER ECOSYSTEMS\n",
-      "Angela Arthington\n",
-      "https://doi.org/10.1890/1051-0761(2006)016[1311:tcopef]2.0.co;2\n",
-      "2039.55\n",
-      "https://api.openalex.org/works/W2150457759/ngrams \n",
+      "A comparative literature analysis of definitions for green and sustainable supply chain management\n",
+      "Payman Ahi\n",
+      "https://doi.org/10.1016/j.jclepro.2013.02.018\n",
+      "727.77094\n",
+      "2013-08-01\n",
+      "https://api.openalex.org/works/W1990457952/ngrams \n",
       "\n"
      ]
     }
@@ -41,7 +44,7 @@
     "    broad='no',\n",
     "    has_ngrams='true',\n",
     "    does_date_matter = 'yes',\n",
-    "    from_date='2000-01-01',\n",
+    "    from_date='2010-01-01',\n",
     "    to_date='2022-12-12'):\n",
     "\n",
     "    if broad == 'no':\n",
@@ -60,13 +63,14 @@
     "        ).json()\n",
     "    \n",
     "    a = []\n",
-    "    for x in range(15):\n",
+    "    for x in range(20):\n",
     "        y = institution['results'][x]['ngrams_url']\n",
     "        if x < 3:\n",
     "            print(institution['results'][x]['title'])\n",
     "            print(institution['results'][x]['authorships'][0]['author']['display_name'])\n",
     "            print(institution['results'][x]['doi'])\n",
     "            print(institution['results'][x]['relevance_score'])\n",
+    "            print(institution['results'][x]['publication_date'])\n",
     "            print(y,'\\n')  \n",
     "        z = requests.get(y).json()\n",
     "        a.append(z)\n",
@@ -74,7 +78,7 @@
     "\n",
     "    return a\n",
     "\n",
-    "_ngrams = searching('environmental flows',broad='yes')\n",
+    "_ngrams = searching('environmental flows',broad='no')\n",
     "\n",
     "# for idx,i in enumerate(_ngrams):\n",
     "#     if idx == 0:\n",
@@ -88,14 +92,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 314,
+   "execution_count": 336,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "101417\n"
+      "120781\n"
      ]
     },
     {
@@ -126,183 +130,183 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>5020</th>\n",
+       "      <th>2066</th>\n",
        "      <td>environmental flow</td>\n",
-       "      <td>463</td>\n",
+       "      <td>735</td>\n",
        "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5080</th>\n",
+       "      <th>10407</th>\n",
        "      <td>flow regime</td>\n",
-       "      <td>345</td>\n",
+       "      <td>340</td>\n",
        "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>11494</th>\n",
+       "      <th>9842</th>\n",
        "      <td>flow alteration</td>\n",
-       "      <td>188</td>\n",
+       "      <td>220</td>\n",
        "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5885</th>\n",
+       "      <th>1977</th>\n",
+       "      <td>water scarcity</td>\n",
+       "      <td>219</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9981</th>\n",
        "      <td>ecological response</td>\n",
-       "      <td>131</td>\n",
+       "      <td>178</td>\n",
        "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5417</th>\n",
-       "      <td>flow recommendation</td>\n",
-       "      <td>112</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5501</th>\n",
+       "      <th>9805</th>\n",
        "      <td>natural flow</td>\n",
-       "      <td>109</td>\n",
+       "      <td>134</td>\n",
        "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5058</th>\n",
+       "      <th>9898</th>\n",
+       "      <td>water management</td>\n",
+       "      <td>94</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10453</th>\n",
+       "      <td>freshwater ecosystem</td>\n",
+       "      <td>85</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2143</th>\n",
+       "      <td>water resource</td>\n",
+       "      <td>83</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10439</th>\n",
+       "      <td>flow management</td>\n",
+       "      <td>81</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9929</th>\n",
+       "      <td>water quality</td>\n",
+       "      <td>80</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2067</th>\n",
+       "      <td>flow requirement</td>\n",
+       "      <td>79</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2154</th>\n",
        "      <td>low flow</td>\n",
-       "      <td>93</td>\n",
+       "      <td>73</td>\n",
        "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5659</th>\n",
+       "      <th>2148</th>\n",
+       "      <td>supply chain</td>\n",
+       "      <td>71</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1993</th>\n",
+       "      <td>blue water</td>\n",
+       "      <td>70</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10459</th>\n",
+       "      <td>aquatic ecosystem</td>\n",
+       "      <td>70</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7595</th>\n",
+       "      <td>natural flow regime</td>\n",
+       "      <td>69</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9856</th>\n",
        "      <td>case study</td>\n",
-       "      <td>65</td>\n",
+       "      <td>69</td>\n",
        "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5451</th>\n",
-       "      <td>hydrologic alteration</td>\n",
-       "      <td>64</td>\n",
+       "      <th>2004</th>\n",
+       "      <td>river basin</td>\n",
+       "      <td>68</td>\n",
        "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>6301</th>\n",
-       "      <td>river flow</td>\n",
-       "      <td>63</td>\n",
+       "      <th>11319</th>\n",
+       "      <td>flow release</td>\n",
+       "      <td>67</td>\n",
        "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>11576</th>\n",
+       "      <th>10691</th>\n",
        "      <td>high flow</td>\n",
        "      <td>63</td>\n",
        "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5021</th>\n",
-       "      <td>flow assessment</td>\n",
-       "      <td>60</td>\n",
+       "      <th>2341</th>\n",
+       "      <td>water use</td>\n",
+       "      <td>62</td>\n",
        "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5874</th>\n",
-       "      <td>riparian vegetation</td>\n",
-       "      <td>60</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11624</th>\n",
+       "      <th>2368</th>\n",
        "      <td>flow standard</td>\n",
-       "      <td>60</td>\n",
+       "      <td>62</td>\n",
        "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>14975</th>\n",
-       "      <td>river ecosystem</td>\n",
-       "      <td>55</td>\n",
+       "      <th>2248</th>\n",
+       "      <td>climate change</td>\n",
+       "      <td>59</td>\n",
        "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3194</th>\n",
-       "      <td>environmental flow assessment</td>\n",
+       "      <th>2080</th>\n",
+       "      <td>water availability</td>\n",
+       "      <td>57</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20558</th>\n",
+       "      <td>flow magnitude</td>\n",
+       "      <td>56</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1389</th>\n",
+       "      <td>environmental flow requirement</td>\n",
        "      <td>54</td>\n",
        "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>22493</th>\n",
-       "      <td>water management</td>\n",
-       "      <td>54</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5076</th>\n",
-       "      <td>flow requirement</td>\n",
+       "      <th>10456</th>\n",
+       "      <td>ecosystem service</td>\n",
        "      <td>53</td>\n",
        "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5783</th>\n",
-       "      <td>ecological condition</td>\n",
-       "      <td>52</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5089</th>\n",
-       "      <td>water resource</td>\n",
+       "      <th>7584</th>\n",
+       "      <td>environmental flow management</td>\n",
        "      <td>51</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11525</th>\n",
-       "      <td>flow magnitude</td>\n",
-       "      <td>51</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3706</th>\n",
-       "      <td>natural flow regime</td>\n",
-       "      <td>49</td>\n",
        "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5480</th>\n",
-       "      <td>flow management</td>\n",
-       "      <td>49</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14981</th>\n",
-       "      <td>water manager</td>\n",
-       "      <td>49</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>30068</th>\n",
-       "      <td>stream gauge</td>\n",
-       "      <td>49</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>57792</th>\n",
-       "      <td>ef method</td>\n",
-       "      <td>49</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5158</th>\n",
-       "      <td>flow variability</td>\n",
-       "      <td>48</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5867</th>\n",
-       "      <td>river basin</td>\n",
-       "      <td>48</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6591</th>\n",
-       "      <td>flow component</td>\n",
-       "      <td>47</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>15270</th>\n",
-       "      <td>adaptive management</td>\n",
-       "      <td>47</td>\n",
+       "      <th>9907</th>\n",
+       "      <td>flow assessment</td>\n",
+       "      <td>51</td>\n",
        "      <td>2</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -310,40 +314,40 @@
        "</div>"
       ],
       "text/plain": [
-       "                               ngram  ngram_count  ngram_tokens\n",
-       "5020              environmental flow          463             2\n",
-       "5080                     flow regime          345             2\n",
-       "11494                flow alteration          188             2\n",
-       "5885             ecological response          131             2\n",
-       "5417             flow recommendation          112             2\n",
-       "5501                    natural flow          109             2\n",
-       "5058                        low flow           93             2\n",
-       "5659                      case study           65             2\n",
-       "5451           hydrologic alteration           64             2\n",
-       "6301                      river flow           63             2\n",
-       "11576                      high flow           63             2\n",
-       "5021                 flow assessment           60             2\n",
-       "5874             riparian vegetation           60             2\n",
-       "11624                  flow standard           60             2\n",
-       "14975                river ecosystem           55             2\n",
-       "3194   environmental flow assessment           54             3\n",
-       "22493               water management           54             2\n",
-       "5076                flow requirement           53             2\n",
-       "5783            ecological condition           52             2\n",
-       "5089                  water resource           51             2\n",
-       "11525                 flow magnitude           51             2\n",
-       "3706             natural flow regime           49             3\n",
-       "5480                 flow management           49             2\n",
-       "14981                  water manager           49             2\n",
-       "30068                   stream gauge           49             2\n",
-       "57792                      ef method           49             2\n",
-       "5158                flow variability           48             2\n",
-       "5867                     river basin           48             2\n",
-       "6591                  flow component           47             2\n",
-       "15270            adaptive management           47             2"
+       "                                ngram  ngram_count  ngram_tokens\n",
+       "2066               environmental flow          735             2\n",
+       "10407                     flow regime          340             2\n",
+       "9842                  flow alteration          220             2\n",
+       "1977                   water scarcity          219             2\n",
+       "9981              ecological response          178             2\n",
+       "9805                     natural flow          134             2\n",
+       "9898                 water management           94             2\n",
+       "10453            freshwater ecosystem           85             2\n",
+       "2143                   water resource           83             2\n",
+       "10439                 flow management           81             2\n",
+       "9929                    water quality           80             2\n",
+       "2067                 flow requirement           79             2\n",
+       "2154                         low flow           73             2\n",
+       "2148                     supply chain           71             2\n",
+       "1993                       blue water           70             2\n",
+       "10459               aquatic ecosystem           70             2\n",
+       "7595              natural flow regime           69             3\n",
+       "9856                       case study           69             2\n",
+       "2004                      river basin           68             2\n",
+       "11319                    flow release           67             2\n",
+       "10691                       high flow           63             2\n",
+       "2341                        water use           62             2\n",
+       "2368                    flow standard           62             2\n",
+       "2248                   climate change           59             2\n",
+       "2080               water availability           57             2\n",
+       "20558                  flow magnitude           56             2\n",
+       "1389   environmental flow requirement           54             3\n",
+       "10456               ecosystem service           53             2\n",
+       "7584    environmental flow management           51             3\n",
+       "9907                  flow assessment           51             2"
       ]
      },
-     "execution_count": 314,
+     "execution_count": 336,
      "metadata": {},
      "output_type": "execute_result"
     }
