--- a/1-19-23.ipynb
+++ b/1-19-23.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -93,7 +93,7 @@
        "198"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1298,7 +1298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1319,7 +1319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -1328,7 +1328,7 @@
        "'Application of the Instream Flow Incremental Methodology to conservation flow for freshwater fishes in Japan'"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1339,7 +1339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1547,6 +1547,7 @@
     "            urlll = _ngrams['results'][0]['ngrams_url']\n",
     "            z = requests.get(urlll).json()\n",
     "            listofngrams.append(z)\n",
+    "            \n",
     "\n",
     "\n",
     "\n",
@@ -1562,7 +1563,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1574,11 +1575,180 @@
     },
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ngram</th>\n",
+       "      <th>ngram_count</th>\n",
+       "      <th>ngram_tokens</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>4296</th>\n",
+       "      <td>environmental flow</td>\n",
+       "      <td>1976</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4339</th>\n",
+       "      <td>flow regime</td>\n",
+       "      <td>1350</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4329</th>\n",
+       "      <td>low flow</td>\n",
+       "      <td>504</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4570</th>\n",
+       "      <td>natural flow</td>\n",
+       "      <td>434</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4271</th>\n",
+       "      <td>high flow</td>\n",
+       "      <td>346</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4353</th>\n",
+       "      <td>minimum flow</td>\n",
+       "      <td>340</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10586</th>\n",
+       "      <td>water quality</td>\n",
+       "      <td>299</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10451</th>\n",
+       "      <td>water resource</td>\n",
+       "      <td>286</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4536</th>\n",
+       "      <td>mean annual</td>\n",
+       "      <td>266</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5171</th>\n",
+       "      <td>flow release</td>\n",
+       "      <td>262</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8891</th>\n",
+       "      <td>natural flow regime</td>\n",
+       "      <td>254</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4385</th>\n",
+       "      <td>fish specie</td>\n",
+       "      <td>246</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17432</th>\n",
+       "      <td>hydrologic alteration</td>\n",
+       "      <td>238</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4899</th>\n",
+       "      <td>river basin</td>\n",
+       "      <td>231</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10649</th>\n",
+       "      <td>flow alteration</td>\n",
+       "      <td>227</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4613</th>\n",
+       "      <td>daily flow</td>\n",
+       "      <td>214</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4406</th>\n",
+       "      <td>flow requirement</td>\n",
+       "      <td>211</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5163</th>\n",
+       "      <td>fish assemblage</td>\n",
+       "      <td>205</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4963</th>\n",
+       "      <td>flow event</td>\n",
+       "      <td>202</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4336</th>\n",
+       "      <td>flow condition</td>\n",
+       "      <td>193</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "(288000, 3)"
+       "                       ngram  ngram_count  ngram_tokens\n",
+       "4296      environmental flow         1976             2\n",
+       "4339             flow regime         1350             2\n",
+       "4329                low flow          504             2\n",
+       "4570            natural flow          434             2\n",
+       "4271               high flow          346             2\n",
+       "4353            minimum flow          340             2\n",
+       "10586          water quality          299             2\n",
+       "10451         water resource          286             2\n",
+       "4536             mean annual          266             2\n",
+       "5171            flow release          262             2\n",
+       "8891     natural flow regime          254             3\n",
+       "4385             fish specie          246             2\n",
+       "17432  hydrologic alteration          238             2\n",
+       "4899             river basin          231             2\n",
+       "10649        flow alteration          227             2\n",
+       "4613              daily flow          214             2\n",
+       "4406        flow requirement          211             2\n",
+       "5163         fish assemblage          205             2\n",
+       "4963              flow event          202             2\n",
+       "4336          flow condition          193             2"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1600,7 +1770,7 @@
     "\n",
     "c = [[x,y] for x,y in b.items()]\n",
     "\n",
-    "badwords = ['add words to filter as necessary',' .$', 'et al','et$',]\n",
+    "badwords = ['add words to filter as necessary',' .$', 'et al','et$', '3 /s', 'm 3 /s']\n",
     "\n",
     "df = pd.DataFrame.from_records(c,columns=['ngram','ngram_count'])\n",
     "df['ngram_tokens'] = df['ngram'].str.split().str.len() #https://stackoverflow.com/questions/37483470/how-to-calculate-number-of-words-in-a-string-in-dataframe\n",
@@ -1610,9 +1780,11 @@
     "\n",
     "for i in badwords:\n",
     "    df3 = df3[~df3['ngram'].str.contains(i)]\n",
-    "df3.head(n=100)\n",
+    "\n",
     "df4 = df3.to_numpy()\n",
-    "df4.shape"
+    "df4.shape\n",
+    "\n",
+    "df3.head(n=20)"
    ]
   },
   {
